# diesel-trivial-convert

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2022-10-29-165401_create_example_models/: down.sql  up.sql
src/: db.rs  label.rs  lib.rs  main.rs  schema.rs
src/models/: example_model.rs  mod.rs
